assets/scss/custom.scss
:root {
    --blue: #8ca6db; // Ein sanftes Blau
    --indigo: #5f5f97; // Ein gedämpftes Indigo
    --purple: #9f7fea; // Ein weiches Violett, inspiriert von Terraform
    --pink: #d294c4; // Ein zurückhaltendes Pink
    --red: #bf616a; // Ein mattes Rot
    --orange: #d08770; // Ein warmes Orange
    --yellow: #ebcb8b; // Ein freundliches Gelb
    --green: #a3be8c; // Ein gedämpftes Grün
    --teal: #96b5b4; // Ein ruhiges Türkis
    --cyan: #88c0d0; // Ein helles Cyan
    --white: #f5f5f5; // Ein helles Grau für den Light Mode
    --gray: #bcbcbc; // Ein mittleres Grau
    --gray-dark: #434c5e; // Ein dunkleres Grau für Text und wichtige Elemente
    --primary: #8fa1b3; // Ein neutraleres Blau als primäre Farbe
    --secondary: #bcbcbc; // Grau als sekundäre Farbe
    --success: #a3be8c; // Wiederverwendung von Grün für Erfolgsmeldungen
    --info: #88c0d0; // Wiederverwendung von Cyan für Informationsmeldungen
    --warning: #ebcb8b; // Wiederverwendung von Gelb für Warnungen
    --danger: #bf616a; // Wiederverwendung von Rot für Gefahren
    --light: #eceff4; // Ein sehr helles Grau für Hintergründe im Light Mode
    --dark: #2e3440; // Ein dunkles Grau für den Dark Mode, nicht zu weit von Schwarz entfernt
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
        "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
        "Noto Color Emoji";
}

.skills {
    width: 100%;
    max-width: 600px;
    padding: 0 20px;
}

.skill-name {
    font-size: 18px;
    font-weight: 700;
    text-transform: uppercase;
    margin: 20px 0;
}

.skill-bar {
    height: 14px;
    background: var(--light);
    border-radius: 3px;
    box-shadow: 5px 5px 10px var(--dark);
}

.skill-per {
    height: 14px;
    background: var(--primary);
    border-radius: 3px;
    position: relative;
    animation: fillBars 2.5s 1;
}


@keyframes fillBars {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

.amanox {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 50%;
    animation-duration: 3s;
    animation-name: amanox;
    animation-timing-function: ease-out;
    animation-iteration-count: 1;
  }
  
  @keyframes amanox {
    from {
      transform: translateX(0%) scale(0.2);
    }
  
    to {
      transform: translateX(-50%) scale(1.0);
    }
  }  

  // Anpassungen für den Light Mode
@media (prefers-color-scheme: light) {
    .amanox {
        filter: invert(100%); // Macht das Logo komplett schwarz
    }
}

